--- a/modules/artifacts/client/views/artifact-view.html
+++ b/modules/artifacts/client/views/artifact-view.html
@@ -1,23 +1,19 @@
-<div class="artifact-view">
 
-	<div class="view-title-container">
-		<h1>{{ project.name }}&nbsp; &rsaquo; &nbsp;{{artifact.name}}</h1>
-		<tmpl-permissions-gear class="permission-btn" x-context="project" x-object="artifact"></tmpl-permissions-gear>
-	</div>
+<div class="view-title-container no-border">
+	<h1>{{artifact.name}}</h1>
+	<tmpl-permissions-gear class="permission-btn" x-context="project" x-object="artifact"></tmpl-permissions-gear>
+</div>
 
-	<div class="view-body-container">
-		<!-- <div ng-include="'modules/artifacts/client/views/partial.artifact-view.html'"></div> -->
-		<tmpl-artifact-display x-mode="'view'" x-artifact="artifact" x-project="project"></tmpl-artifact-display>
-		<div ng-if="authentication.user" ng-include="'modules/artifacts/client/views/partial.artifact-notes.html'"></div>
-		<div ng-if="authentication.user" ng-include="'modules/artifacts/client/views/partial.artifact-comments.html'"></div>
-		<div class="form-footer clearfix">
-			<div class="pull-right">
-				<a class="btn btn-default" ui-sref="p.detail">Cancel</a>
-				<a ng-if="artifact.userCan.write"
-				   class="btn btn-default"
-				   ui-sref="p.artifact.edit({artifactId:artifact._id})">Edit</a>
-			</div>
+<div class="view-body-container">
+	<tmpl-artifact-display x-mode="'view'" x-artifact="artifact" x-project="project"></tmpl-artifact-display>
+
+	<div ng-if="authentication.user" ng-include="'modules/artifacts/client/views/partial.artifact-notes.html'"></div>
+	<div ng-if="authentication.user" ng-include="'modules/artifacts/client/views/partial.artifact-comments.html'"></div>
+
+	<div class="form-footer no-border clearfix">
+		<a class="back-btn btn btn-link pull-left" ui-sref="p.detail"><span class="glyphicon glyphicon-chevron-left"></span>Back to Product Details</a>
+		<div class="pull-right">
+			<a class="btn btn-default" ng-if="artifact.userCan.write" ui-sref="p.artifact.edit({artifactId:artifact._id})">Edit</a>
 		</div>
 	</div>
-
 </div>
