--- a/modules/artifacts/client/views/artifact-list.html
+++ b/modules/artifacts/client/views/artifact-list.html
@@ -1,9 +1,11 @@
 <div class="artifact-list-view">
   <div class="panel panel-default">
 
-    <div class="panel-heading clearfix">
+    <div class="panel-heading flex-row">
       <h2>{{s.caption}}</h2>
-      <tmpl-permissions-gear class="permission-btn" x-context="s.project" x-object="s.project" x-permissions="listArtifacts"></tmpl-permissions-gear>
+      <div class="actions">
+        <tmpl-permissions-gear class="permission-btn" x-context="s.project" x-object="s.project" x-permissions="listArtifacts"></tmpl-permissions-gear>
+      </div>
     </div>
 
     <!-- TABLE -->
