--- a/modules/artifacts/client/views/artifact-publish.html
+++ b/modules/artifacts/client/views/artifact-publish.html
@@ -1,25 +1,19 @@
-<h1 class="page-title">
-	Publish {{artifact.name}} for {{ project.name }}
-</h1>
 
-<div class="text-right">
-	<a class="btn btn-link btn-xs" ui-sref="p.detail">Cancel</a>
+<div class="view-title-container">
+	<h1>Publish Content &nbsp;&rsaquo;&nbsp; {{artifact.name}}</h1>
 </div>
 
-<!-- <div ng-include="'modules/artifacts/client/views/partial.artifact-view.html'"></div> -->
-
-<tmpl-artifact-display x-mode="'view'" x-artifact="artifact" x-project="project"></tmpl-artifact-display>
-
-<div class="panel panel-default">
-	<div class="panel-body">
-		<div class="text-right">
+<div class="view-body-container">
+	<tmpl-artifact-display x-mode="'view'" x-artifact="artifact" x-project="project"></tmpl-artifact-display>
+	<div class="form-footer clearfix">
+		<div class="pull-right">
 			<a class="btn btn-default" ui-sref="p.detail">Cancel</a>
 			<a class="btn btn-success" ng-click="submit()">Publish</a>
 		</div>
 	</div>
+
+	<div ng-include="'modules/artifacts/client/views/partial.artifact-notes.html'"></div>
+	<div ng-include="'modules/artifacts/client/views/partial.artifact-comments.html'"></div>
+
 </div>
-
-<div ng-include="'modules/artifacts/client/views/partial.artifact-notes.html'"></div>
-
-<div ng-include="'modules/artifacts/client/views/partial.artifact-comments.html'"></div>
 
