--- a/modules/artifacts/client/views/artifact-review.html
+++ b/modules/artifacts/client/views/artifact-review.html
@@ -1,31 +1,24 @@
-<h1 class="page-title">
-	Review {{artifact.name}} ({{artifact.version}}) for {{ project.name }}
-</h1>
 
-<div class="text-right">
-	<a class="btn btn-link btn-xs" ui-sref="p.detail">Cancel</a>
+<div class="view-title-container no-border">
+	<h1>Review Content &nbsp;&rsaquo;&nbsp; {{artifact.name}} ({{artifact.version}})</h1>
 </div>
 
-<!-- <div ng-include="'modules/artifacts/client/views/partial.artifact-view.html'"></div> -->
-
-<tmpl-artifact-display x-mode="'view'" x-artifact="artifact" x-project="project"></tmpl-artifact-display>
-
-<div class="panel panel-default">
-	<div class="panel-body">
-
-		<h3>Review Note</h3>
-		<div class="form-group">
-			<textarea rows="10" class="form-control" ng-model="artifact.reviewnote"></textarea>
-		</div>
-		<div class="text-right">
-			<a class="btn btn-default" ui-sref="p.detail">Cancel</a>
-			<a class="btn btn-default" ng-click="reject()">Reject and Return for {{buttons.prev}}</a>
+<div class="view-body-container">
+	<tmpl-artifact-display x-mode="'view'" x-artifact="artifact" x-project="project"></tmpl-artifact-display>
+	<div class="form-group">
+		<label class="control-label">Review Notes</label>
+		<textarea class="form-control" rows="5" ng-model="artifact.reviewnote"></textarea>
+	</div>
+	<div class="form-footer clearfix">
+		<a class="back-btn btn btn-link pull-left" ui-sref="p.detail"><span class="glyphicon glyphicon-chevron-left"></span>Back to Product Details</a>
+		<div class="pull-right">
+			<a class="btn btn-danger" ng-click="reject()">Reject - Return for {{buttons.prev}}</a>
 			<a class="btn btn-success" ng-click="submit()">Submit for {{buttons.next}}</a>
 		</div>
 	</div>
+
+	<div ng-include="'modules/artifacts/client/views/partial.artifact-notes.html'"></div>
+	<div ng-include="'modules/artifacts/client/views/partial.artifact-comments.html'"></div>
+
 </div>
-
-<div ng-include="'modules/artifacts/client/views/partial.artifact-notes.html'"></div>
-
-<div ng-include="'modules/artifacts/client/views/partial.artifact-comments.html'"></div>
 
