--- a/modules/project-comments/client/views/public-comments/open-house-edit.html
+++ b/modules/project-comments/client/views/public-comments/open-house-edit.html
@@ -2,32 +2,28 @@
 	<button type="button" class="btn btn-default close" ng-click="s.cancel()">
 		<span aria-hidden="true">&times;</span>
 	</button>
-	<h3 class="modal-title">Add/Edit Open House Information</h3>
+	<h3 class="modal-title">Add Open House</h3>
 </div>
+
 <div class="modal-body">
-		<div class="row">
-			<div class="form-group">
-				<label class="control-label">Event Date</label>
-				<div class="input-group">
-					<p class="form-control-static">
-					{{ s.openHouse.eventDate | amDateFormat:'MMM Do YYYY' }}
-					<a x-modal-date-picker x-selected-date="s.openHouse.eventDate" >
-						&nbsp;&nbsp;
-						<i class="glyphicon glyphicon-calendar"></i>
-					</a>
-					&nbsp; &nbsp;
-					</p>
-				</div>
+	<div class="form-group">
+		<label class="control-label">Event Date</label>
+		<div class="form-inline">
+			<div class="form-control date-picker" x-modal-date-picker x-selected-date="s.openHouse.eventDate">
+				<span ng-if="!s.openHouse.eventDate">Select Date</span>
+				{{ s.openHouse.eventDate | amDateFormat:'MMM Do YYYY' }}
+				<span class="glyphicon glyphicon-calendar"></span>
 			</div>
 		</div>
-		<div class="row">
-			<div class="form-group ">
-				<label class="control-label">Details</label>
-				<textarea id="content" rows="10" name="content" class="form-control" ng-model="s.openHouse.description" required></textarea>
-			</div>
-		</div>
+	</div>
+	<div class="form-group">
+		<label class="control-label">Open House Details</label>
+		<textarea id="content" rows="10" name="content" class="form-control" ng-model="s.openHouse.description" required></textarea>
+	</div>
 </div>
+
 <div class="modal-footer">
-	<button type="button" class="btn btn-success" ng-click="s.ok()">Ok</button>
+	<button type="button" class="btn btn-default" ng-click="s.cancel()">Cancel</button>
+	<button type="button" class="btn btn-success" ng-click="s.ok()">OK</button>
 </div>
 
