--- a/modules/core/client/views/role-permissions-gear.html
+++ b/modules/core/client/views/role-permissions-gear.html
@@ -1,1 +1,1 @@
-<a ng-if="permCtrl.showGear" class="btn btn-link btn-sm" x-role-permissions-modal x-context="context" x-object="object"><i class="glyphicon glyphicon-cog"></i></a>
+<button ng-if="permCtrl.showGear" class="btn btn-default btn-sm" x-role-permissions-modal x-context="context" x-object="object"><i class="glyphicon glyphicon-cog"></i></button>
