--- a/modules/artifacts/client/views/artifact-list.html
+++ b/modules/artifacts/client/views/artifact-list.html
@@ -1,51 +1,51 @@
 <div class="artifact-list-view">
-  <div class="panel panel-default">
+    <div class="panel panel-default">
 
-    <div class="panel-heading flex-row">
-      <h2>{{s.caption}}</h2>
-      <div class="actions">
-        <tmpl-permissions-gear class="permission-btn" x-context="s.project" x-object="s.project" x-permissions="listArtifacts"></tmpl-permissions-gear>
-      </div>
+        <div class="panel-heading flex-row">
+            <h2>{{s.caption}}</h2>
+            <div class="actions">
+                <button class="btn btn-default btn-sm " type="button"
+                    ng-if="s.allowAddItem"
+                    ng-click="$event.stopPropagation();s.openAddTypes()">
+                    <span class="glyphicon glyphicon-plus"></span><span>Add Content</span>
+                </button>
+                <tmpl-permissions-gear class="permission-btn" x-context="s.project" x-object="s.project" x-permissions="listArtifacts"></tmpl-permissions-gear>
+            </div>
+        </div>
+
+        <!-- TABLE -->
+        <table class="table table-hover" ng-table="s.tableParams" show-filter="true">
+            <tr class="clickable" ng-repeat="o in $data" ui-sref="p.artifact.view({artifactId:o._id})">
+                <td class="artifact-name-col" header-class="'artifact-name-col'" data-title="'Name'" filter="{'name':'text'}" sortable="'name'">
+                    {{o.name}}
+                </td>
+                <td data-title="'Version'" filter="{'version':'select'}" filter-data="s.versionArray" class="text-center" sortable="'version'">
+                    {{o.version}}
+                </td>
+                <td data-title="'Stage'" filter="{'stage':'select'}" filter-data="s.stageArray" class="text-center" sortable="'stage'">
+                    {{o.stage}}
+                </td>
+                <td data-title="'Last Update'" filter-data="'dateUpdated'" class="text-center" sortable="'dateUpdated'">
+                    {{ o.dateUpdated | amDateFormat:'MMM DD, YYYY' }}
+                </td>
+                <td data-title="'Updated By'" class="text-center" filter="{'updatedBy.username':'text'}" sortable="'updatedBy.username'">
+                    {{o.updatedBy.username}}
+                </td>
+                <td class="actions-col action-x2" header-class="'actions-col action-x2'" data-title="'Actions'">
+                    <button class="btn btn-link btn-sm" ng-if="o.userPermissions.write" ng-click="$event.stopPropagation()" ui-sref="p.artifact.edit({artifactId:o._id})">
+                        <span class="glyphicon glyphicon-pencil"></span>
+                    </button>
+                    <tmpl-permissions-gear class="permission-btn" x-context="s.project" x-object="o"></tmpl-permissions-gear>
+                </td>
+            </tr>
+            <tr ng-if="!$data || $data.length === 0">
+                <td colspan="6">
+                    <span>{{s.noDataMessage}}</span>
+                </td>
+            </tr>
+        </table>
+        <!-- / TABLE -->
+
     </div>
-
-    <!-- TABLE -->
-    <div class="button-bar" ng-if="s.allowAddItem">
-      <button class="btn btn-default btn-sm " type="button" ng-click="$event.stopPropagation();s.openAddTypes()">
-        <span class="glyphicon glyphicon-plus"></span><span>Add Content</span></button>
-    </div>
-    <table class="table table-hover" ng-table="s.tableParams" show-filter="true">
-      <tr ng-repeat="o in $data" ui-sref="p.artifact.view({artifactId:o._id})" class="clickable">
-        <td class="artifact-name-col" header-class="'artifact-name-col'" data-title="'Name'" filter="{'name':'text'}"
-            sortable="'name'">{{o.name}}
-        </td>
-        <td data-title="'Version'" filter="{'version':'select'}" filter-data="s.versionArray" class="text-center"
-            sortable="'version'">{{o.version}}
-        </td>
-        <td data-title="'Stage'" filter="{'stage':'select'}" filter-data="s.stageArray" class="text-center"
-            sortable="'stage'">{{o.stage}}
-        </td>
-        <!-- <td data-title="'Desc.'" filter="{'shortDescription':'text'}" class="text-center" sortable="'shortDescription'">{{o.shortDescription}}</td> -->
-        <td data-title="'Last Update'" class="text-center" sortable="'dateUpdated'">{{
-          o.dateUpdated | date : format : timezone }}
-        </td>
-        <td data-title="'Updated By'" class="text-center" filter="{'updatedBy.username':'text'}"
-            sortable="'updatedBy.username'">{{o.updatedBy.username}}
-        </td>
-        <td class="actions-col action-x2" header-class="'actions-col action-x2'">
-          <a class="btn btn-link btn-sm" ng-if="o.userPermissions.write" ng-click="$event.stopPropagation()"
-             ui-sref="p.artifact.edit({artifactId:o._id})">
-            <span class="glyphicon glyphicon-pencil"></span>
-          </a>
-          <tmpl-permissions-gear class="permission-btn" x-context="s.project" x-object="o"></tmpl-permissions-gear>
-        </td>
-      </tr>
-      <tr ng-if="!$data || $data.length === 0">
-        <td colspan="6">
-          <span>{{s.noDataMessage}}</span>
-        </td>
-      </tr>
-    </table><!-- / TABLE -->
-
-  </div>
 
 </div>
