--- a/modules/documents/client/views/partials/modal-document-link.html
+++ b/modules/documents/client/views/partials/modal-document-link.html
@@ -1,5 +1,13 @@
-<tmpl-documents-link x-current="docLinkModal.current" x-project="docLinkModal.project" x-type="project" x-doc-location-code="docLinkModal.docLocationCode" x-artifact="docLinkModal.artifact"></tmpl-documents-link>
+
+<div class="modal-header">
+	<h3 class="modal-title">Link Documents</h3>
+</div>
+
+<div class="modal-body">
+	<tmpl-documents-link x-current="docLinkModal.current" x-project="docLinkModal.project" x-type="project" x-doc-location-code="docLinkModal.docLocationCode" x-artifact="docLinkModal.artifact"></tmpl-documents-link>
+</div>
+
 <div class="modal-footer">
 	<button class="btn btn-default" type="button" ng-click="docLinkModal.cancel()">Cancel</button>
-	<button class="btn btn-default" type="button" ng-click="docLinkModal.ok()">Save</button>
+	<button class="btn btn-primary" type="button" ng-click="docLinkModal.ok()">Save</button>
 </div>
