Add in the file list, and allow removal of files.

--- a/modules/project-comments/client/views/public-comments/add.html
+++ b/modules/project-comments/client/views/public-comments/add.html
@@ -67,7 +67,7 @@
 					<ul class="list-group">
 						<li class="list-group-item flex-row"
 							ng-class="{'danger': f.$error}"
-							ng-repeat="f in s.comment.fileList">
+							ng-repeat="f in s.fileList">
 							<div class="icon">
 								<span class="glyphicon glyphicon-file"></span>
 							</div>
